added pages and pipelined from index.html

--- a/pages/kits.html
+++ b/pages/kits.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Engineering World Health</title>
+    <title>Kits</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
     <div class="top-navigation-bar">
         <a href="../index.html"><img class="logo" src="../assets/images/ewh-logo.png" alt="ewh logo"></a>
         <div class="top-navigation-bar-links">
-            <a href="pages/about.html"><button class="nav-button">ABOUT US</button></a>
-            <a href="pages/kits.html"><button class="nav-button">KITS</button></a>
-            <a href="pages/bmet.html"><button class="nav-button">BMET</button></a>
-            <a href="pages/news.html"><button class="nav-button">NEWS</button></a>
+            <a href="about.html"><button class="nav-button">ABOUT US</button></a>
+            <a href="kits.html"><button class="nav-button">KITS</button></a>
+            <a href="bmet.html"><button class="nav-button">BMET</button></a>
+            <a href="news.html"><button class="nav-button">NEWS</button></a>
         </div>
     </div>
     
     <h1 class="website-title">Engineering World Health </h1>
     <h2>University of Colorado Boulder</h2>
-    <p>This is the homepage.</p>
+    <p>This is the Kits page.</p>
 </body>
 </html>
