added some pictures, modified file structure, and added top nav bar

--- a/index.html
+++ b/index.html
@@ -5,20 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Engineering World Health</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/general.css">
 </head>
 <body>
-    <div class="top-navigation-bar">
+    <header>
         <a href="../index.html"><img class="logo" src="../assets/images/ewh-logo.png" alt="ewh logo"></a>
-        <div class="top-navigation-bar-links">
-            <a href="pages/about.html"><button class="nav-button">ABOUT US</button></a>
-            <a href="pages/kits.html"><button class="nav-button">KITS</button></a>
-            <a href="pages/bmet.html"><button class="nav-button">BMET</button></a>
-            <a href="pages/news.html"><button class="nav-button">NEWS</button></a>
-        </div>
+        <a href="pages/about.html"><button class="nav-button">ABOUT US</button></a>
+        <a href="pages/kits.html"><button class="nav-button">KITS</button></a>
+        <a href="pages/bmet.html"><button class="nav-button">BMET</button></a>
+        <a href="pages/news.html"><button class="nav-button">NEWS</button></a>
+        <img class="search-icon" src="assets/images/search.svg" alt="search icon">
+    </header>
+    
+    <div class="main-container">
+        <h1 class="website-title">Homepage</h1>
+        <h2>University of Colorado Boulder</h2>
+        <p>
+            Lorem ipsum odor amet, consectetuer adipiscing elit. Montes ante posuere et dictum aliquam justo aliquet. Arcu aliquet ad ullamcorper platea platea enim natoque volutpat. Erat nullam mi eros fusce maecenas pulvinar ultricies. Gravida elementum gravida viverra urna dis ex curabitur suspendisse. Nostra habitant tempor morbi enim cras scelerisque morbi mi. Convallis conubia imperdiet; lacus diam suspendisse erat. Primis vel duis gravida nostra nulla laoreet tincidunt amet. Ligula curabitur praesent hac aliquet eget; egestas hac.
+            <br><br>
+            Nunc habitant maximus etiam, litora rhoncus ante. Consequat adipiscing euismod primis libero vel id torquent erat. Pulvinar massa quis penatibus ante sapien faucibus adipiscing mollis. Massa a donec feugiat, nunc elementum class proin pharetra. Id eros finibus risus phasellus ante iaculis id ad. Convallis erat metus per; fusce eget nostra nascetur. Adipiscing ligula eleifend ante enim class bibendum. Dolor consequat mi libero, finibus posuere senectus. Sollicitudin neque nunc bibendum vitae euismod semper natoque sit ultricies.
+            <br><br>
+
+            Egestas accumsan porta cubilia volutpat taciti lorem nibh nec. Lobortis facilisi lobortis, tempus rutrum venenatis conubia pulvinar? Pretium nam nibh ligula dictum mi imperdiet porttitor laoreet. Aliquam posuere fusce dignissim nec cubilia pulvinar. Lobortis malesuada lacus aliquet diam faucibus suspendisse. Hendrerit iaculis tellus porttitor, sapien lacus non lacinia. Ornare fringilla dignissim congue curae tempus dapibus. Duis dictum venenatis justo leo quis. Diam dictum curae libero fames sodales.
+            <br><br>
+
+            Suscipit et id mus netus posuere luctus eget. Faucibus phasellus volutpat; velit nisi ipsum neque suspendisse felis neque. Ultrices natoque mollis ullamcorper faucibus; faucibus nunc taciti. Ut eros est eget integer leo vitae per urna. Magnis cursus tempor nisl bibendum ridiculus nostra. Mi facilisis justo donec maecenas ligula justo nunc orci.
+            <br><br>
+
+            Aviverra dolor, dictum sociosqu nunc vivamus id pellentesque. Dignissim ornare viverra porttitor risus ligula porttitor turpis ligula. Mattis tempor auctor nascetur sed iaculis hac metus consequat. Laoreet erat phasellus nulla commodo ultrices magnis ullamcorper. Vulputate curae molestie egestas vivamus ipsum venenatis sit purus. Curabitur metus hendrerit pellentesque consectetur habitant senectus. Hac dictumst ultrices laoreet commodo non. Hendrerit himenaeos per id aptent in mus pretium conubia.
+        </p>
     </div>
     
-    <h1 class="website-title">Engineering World Health </h1>
-    <h2>University of Colorado Boulder</h2>
-    <p>This is the homepage.</p>
 </body>
 </html>
