--- a/pages/about.html
+++ b/pages/about.html
@@ -14,11 +14,11 @@
             <a href="kits.html"><button class="nav-button">KITS</button></a>
             <a href="bmet.html"><button class="nav-button">BMET</button></a>
             <a href="news.html"><button class="nav-button">NEWS</button></a>
+            <img src="../assets/images/search.svg" alt="search icon">
         </div>
     </div>
     
-    <h1 class="website-title">Engineering World Health </h1>
+    <h1 class="website-title">About Us</h1>
     <h2>University of Colorado Boulder</h2>
-    <p>This is the About Us page.</p>
 </body>
 </html>
