--- a/pages/bmet.html
+++ b/pages/bmet.html
@@ -14,11 +14,11 @@
             <a href="kits.html"><button class="nav-button">KITS</button></a>
             <a href="bmet.html"><button class="nav-button">BMET</button></a>
             <a href="news.html"><button class="nav-button">NEWS</button></a>
+            
         </div>
     </div>
     
-    <h1 class="website-title">Engineering World Health </h1>
+    <h1 class="website-title">BMET</h1>
     <h2>University of Colorado Boulder</h2>
-    <p>This is the BMET page.</p>
 </body>
 </html>
