--- a/pages/news.html
+++ b/pages/news.html
@@ -17,8 +17,7 @@
         </div>
     </div>
     
-    <h1 class="website-title">Engineering World Health </h1>
+    <h1 class="website-title">NEWS</h1>
     <h2>University of Colorado Boulder</h2>
-    <p>This is the News page.</p>
 </body>
 </html>
