--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CU Engineering World Health</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/general.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/general.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700%7CRoboto:400,400i,700%7CNoto+Serif:400i'
             rel='stylesheet'>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="../assets/images/ewh-logo.png" alt="ewh logo"></a>
+        <a href="./index.html"><img class="logo" src="./assets/images/ewh-logo.png" alt="ewh logo"></a>
 
         <div>
-            <a href="pages/dummy.html"><button class="nav-button">ABOUT US</button></a>
-            <a href="pages/dummy.html"><button class="nav-button">KITS</button></a>
-            <a href="pages/dumyy.html"><button class="nav-button">BMET</button></a>
-            <a href="pages/dummy.html"><button class="nav-button">NEWS</button></a>
+            <a href="./pages/dummy.html"><button class="nav-button">ABOUT US</button></a>
+            <a href="./pages/dummy.html"><button class="nav-button">KITS</button></a>
+            <a href="./pages/dumyy.html"><button class="nav-button">BMET</button></a>
+            <a href="./pages/dummy.html"><button class="nav-button">NEWS</button></a>
+            <a href="./pages/dummy.html"><button class="nav-button">JOIN</button></a>
         </div>
         
-        <!-- <img class="search-icon" src="assets/images/search.svg" alt="search icon"> -->
     </header>
 
     <div class="cover-image-container">
-      <img src="assets/images/cover-image.jpg" alt="cover image" class="cover-image">
+      <img src="./assets/images/cover-image.JPG" alt="cover image" class="cover-image">
       
       <div class="cover-image-text">
         <p>CU Engineering World Health</p>
