split up css files and removed button inside of links

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/general.css">
+    <link rel="stylesheet" href="./assets/css/header.css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,600,700%7CRoboto:400,400i,700%7CNoto+Serif:400i'
             rel='stylesheet'>
 </head>
@@ -15,11 +16,8 @@
         <a href="./index.html"><img class="logo" src="./assets/images/ewh-logo.png" alt="ewh logo"></a>
 
         <div>
-            <a href="./pages/dummy.html"><button class="nav-button">ABOUT US</button></a>
-            <a href="./pages/dummy.html"><button class="nav-button">KITS</button></a>
-            <a href="./pages/dumyy.html"><button class="nav-button">BMET</button></a>
-            <a href="./pages/dummy.html"><button class="nav-button">NEWS</button></a>
-            <a href="./pages/dummy.html"><button class="nav-button">JOIN</button></a>
+            <a href="./pages/dummy.html" class="nav-button">ABOUT US</a>
+            <a href="./pages/dummy.html" class="join-button">JOIN</a>
         </div>
         
     </header>
