--- a/pages/dummy.html
+++ b/pages/dummy.html
@@ -15,10 +15,10 @@
         <a href="../index.html"><img class="logo" src="../assets/images/ewh-logo.png" alt="ewh logo"></a>
 
         <div>
-            <a href="dummy.html"><button class="nav-button">ABOUT US</button></a>
-            <a href="dummy.html"><button class="nav-button">KITS</button></a>
-            <a href="dumyy.html"><button class="nav-button">BMET</button></a>
-            <a href="dummy.html"><button class="nav-button">NEWS</button></a>
+            <a href="dummy.html" class="nav-button">ABOUT US</a>
+            <a href="dummy.html" class="nav-button"><button >KITS</button></a>
+            <a href="dumyy.html" class="nav-button"><button class="nav-button">BMET</button></a>
+            <a href="dummy.html" class="nav-button">NEWS</a>
         </div>
     </header>
 
