--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Main Content -->
     <main>
         <div class="cover-image-container">
-            <img src="./assets/images/cover-image.JPG" alt="cover image" class="cover-image">
+            <img src="./assets/images/cover-image.jpg" alt="cover image" class="cover-image">
             <div class="cover-image-text">
                 <p>CU Engineering World Health</p>
             </div>
